--- a/articles/communication-services/toc.yml
+++ b/articles/communication-services/toc.yml
@@ -98,14 +98,50 @@
       href: samples/web-calling-sample.md
 - name: リファレンス
   items:
+    - name: リファレンス ドキュメントの概要
+      href: concepts/reference.md
     - name: REST API のドキュメント
       href: 'https://docs.microsoft.com/rest/api/communication/'
-    - name: 呼び出し元ライブラリ (Android/Java)
-      href: 'https://docs.microsoft.com/java/api/com.azure.communication.calling?view=communication-services-java-android'
-    - name: 呼び出し元ライブラリ (JS)
-      href: 'https://docs.microsoft.com/javascript/api/azure-communication-services/@azure/communication-calling/?view=azure-communication-services-js'
-    - name: 呼び出し元ライブラリ (iOS)
-      href: 'https://docs.microsoft.com/objectivec/communication-services/calling/'
+    - name: ライブラリの呼び出し
+      items:
+        - name: 呼び出し (JavaScript)
+          href: 'https://docs.microsoft.com/javascript/api/azure-communication-services/@azure/communication-calling/?view=azure-communication-services-js'
+        - name: 呼び出し (Android/Java)
+          href: 'https://docs.microsoft.com/java/api/com.azure.communication.calling?view=communication-services-java-android'
+        - name: 呼び出し (iOS)
+          href: 'https://docs.microsoft.com/objectivec/communication-services/calling/'
+    - name: チャット ライブラリ
+      items:
+        - name: チャット (JavaScript)
+          href: 'https://azure.github.io/azure-sdk-for-js/communication.html#azure-communication-chat'
+        - name: チャット (.NET)
+          href: 'https://azure.github.io/azure-sdk-for-net/communication.html#azurecommunicationchat'
+        - name: チャット (Android/Java)
+          href: 'https://azure.github.io/azure-sdk-for-java/communication.html#azure-communication-chat'
+    - name: SMS ライブラリ
+      items:
+        - name: SMS (JavaScript)
+          href: 'https://azure.github.io/azure-sdk-for-js/communication.html#azure-communication-sms'
+        - name: SMS (.NET)
+          href: 'https://azure.github.io/azure-sdk-for-net/communication.html#azurecommunicationsms'
+        - name: SMS (Android/Java)
+          href: 'https://azure.github.io/azure-sdk-for-java/communication.html#azure-communication-sms'
+    - name: 管理ライブラリ
+      items:
+        - name: 管理 (JavaScript)
+          href: 'https://azure.github.io/azure-sdk-for-js/communication.html#azure-communication-administration'
+        - name: 管理 (.NET)
+          href: 'https://azure.github.io/azure-sdk-for-net/communication.html#azurecommunicationadministration'
+        - name: 管理 (Android/Java)
+          href: 'https://azure.github.io/azure-sdk-for-java/communication.html#azure-communication-administration'
+    - name: 共通ライブラリ
+      items:
+        - name: 共通 (JavaScript)
+          href: 'https://azure.github.io/azure-sdk-for-js/communication.html#azure-communication-common'
+        - name: 共通 (.NET)
+          href: 'https://azure.github.io/azure-sdk-for-net/communication.html#azurecommunicationcommon'
+        - name: 共通 (Android/Java)
+          href: 'https://azure.github.io/azure-sdk-for-java/communication.html#azure-communication-common'
 - name: リソース
   items:
     - name: リリース ノート
