--- a/articles/automation/TOC.yml
+++ b/articles/automation/TOC.yml
@@ -128,7 +128,7 @@
               href: graphical-runbook-sdk.md
         - name: Runbook を監視する
           items:
-            - name: Runbook 出力を監視する
+            - name: Runbook の出力を構成する
               href: automation-runbook-output-and-messages.md
             - name: グラフィック Runbook でのエラー処理
               href: automation-runbook-graphical-error-handling.md
