--- a/articles/cosmos-db/TOC.yml
+++ b/articles/cosmos-db/TOC.yml
@@ -557,14 +557,9 @@
               href: sql-query-linq-to-sql.md
         - name: コンテナーとアイテム
           items:
-            - name: インデックス作成
-              items:
-                - name: インデックス作成の概要
-                  displayName: 'range, spatial'
-                  href: index-overview.md
-                - name: インデックス作成ポリシー
-                  displayName: 'consistent, none'
-                  href: index-policy.md
+            - name: インデックス作成の概要
+              displayName: 'range, spatial'
+              href: index-overview.md
             - name: Time to Live
               displayName: 'delete, delete data, ttl'
               href: time-to-live.md
@@ -665,8 +660,6 @@
             - name: Time to Live の構成
               displayName: 'delete, delete data, ttl'
               href: how-to-time-to-live.md
-            - name: インデックス作成ポリシーの管理
-              href: how-to-manage-indexing-policy.md
             - name: 一意のキーの定義
               href: how-to-define-unique-keys.md
         - name: パフォーマンス
@@ -677,6 +670,13 @@
                   href: profile-sql-api-query.md
                 - name: クエリ パフォーマンスの調整
                   href: sql-api-query-metrics.md
+            - name: インデックス作成
+              items:
+                - name: インデックス作成ポリシー
+                  displayName: 'consistent, none, indexing, policy'
+                  href: index-policy.md
+                - name: インデックス作成ポリシーの管理
+                  href: how-to-manage-indexing-policy.md
             - name: .NET
               items:
                 - name: .NET SDK v3 のパフォーマンスに関するヒント
@@ -753,6 +753,8 @@
               href: create-sql-api-java-changefeed.md
         - name: サーバー側プログラミング
           items:
+            - name: トランザクション バッチ操作の実行
+              href: transactional-batch.md
             - name: ストアド プロシージャ、トリガー、UDF の記述
               href: how-to-write-stored-procedures-triggers-udfs.md
             - name: JavaScript クエリ API を使用したストアド プロシージャとトリガーの記述
