--- a/articles/iot-central/core/TOC.yml
+++ b/articles/iot-central/core/TOC.yml
@@ -65,7 +65,7 @@
           href: /learn/modules/manage-iot-central-apps-with-rest-api/
 - name: 概念
   items:
-    - name: Architecture
+    - name: アーキテクチャ
       href: concepts-architecture.md
     - name: アプリケーション テンプレートとは
       href: concepts-app-templates.md
@@ -221,6 +221,8 @@
           href: ../../iot-hub/iot-hub-devguide-sdks.md#azure-iot-hub-device-sdks
     - name: IoT Central API リファレンス
       href: /rest/api/iotcentral/
+    - name: 顧客データ所在地
+      href: iot-central-customer-data-residency.md
     - name: 顧客データ要求
       href: iot-central-customer-data-requests.md
     - name: サポートされているブラウザー
