--- a/articles/postgresql/TOC.yml
+++ b/articles/postgresql/TOC.yml
@@ -23,6 +23,9 @@
         - name: DMS を使用した最小限のダウンタイムでの移行
           href: howto-migrate-online.md
           displayName: 'dms, data migration service'
+    - name: バージョン管理ポリシー
+      href: concepts-version-policy.md
+      displayName: 'version, postgresql'
 - name: シングル サーバー
   expanded: true
   items:
@@ -382,6 +385,8 @@
           items:
             - name: Azure portal
               href: howto-move-regions-portal.md
+        - name: メジャー バージョンのアップグレード
+          href: how-to-upgrade-using-dump-and-restore.md
 - name: フレキシブル サーバー (プレビュー)
   expanded: true
   items:
