--- a/articles/attestation/toc.yml
+++ b/articles/attestation/toc.yml
@@ -13,7 +13,7 @@
       href: quickstart-powershell.md
 - name: チュートリアル
   items:
-    - name: 構成証明ポリシーの作成と署名
+    - name: 構成証明ポリシーの作成
       href: author-sign-policy.md
     - name: SGX 構成証明コード サンプル
       href: /samples/browse/?expanded=azure&terms=attestation
@@ -47,5 +47,7 @@
       href: 'https://www.nuget.org/packages/Microsoft.Azure.DCAP/'
     - name: Linux 向け Azure DCAP ライブラリ
       href: 'https://packages.microsoft.com/ubuntu/18.04/prod/pool/main/a/az-dcap-client/'
+    - name: 問題のトラブルシューティング
+      href: troubleshoot-guide.md
     - name: VBS 構成証明プロトコル
       href: virtualization-based-security-protocol.md
