--- a/articles/lab-services/TOC.yml
+++ b/articles/lab-services/TOC.yml
@@ -4,6 +4,10 @@
   items:
     - name: Lab Services について
       href: lab-services-overview.md
+- name: クイックスタート
+  items:
+    - name: はじめに
+      href: get-started-manage-labs.md
 - name: チュートリアル
   items:
     - name: ラボ アカウントを設定する
