--- a/articles/data-factory/TOC.yml
+++ b/articles/data-factory/TOC.yml
@@ -167,7 +167,7 @@
       href: concepts-pipeline-execution-triggers.md
     - name: 統合ランタイム
       href: concepts-integration-runtime.md
-    - name: セキュリティ
+    - name: Security
       items:
         - name: セキュリティ ベースライン
           href: security-baseline.md
@@ -203,6 +203,8 @@
       href: concepts-roles-permissions.md
     - name: 名前付け規則
       href: naming-rules.md
+    - name: データの冗長性
+      href: concepts-data-redundancy.md
 - name: 操作方法ガイド
   items:
     - name: Author
@@ -576,7 +578,7 @@
           href: control-flow-system-variables.md
         - name: マッピング データ フローをパラメーター化する
           href: parameters-data-flow.md
-    - name: セキュリティ
+    - name: Security
       items:
         - name: データ移動のセキュリティに関する考慮事項
           href: data-movement-security-considerations.md
