--- a/articles/dedicated-hsm/toc.yml
+++ b/articles/dedicated-hsm/toc.yml
@@ -22,12 +22,16 @@
       href: physical-security.md
     - name: サポート
       href: supportability.md
-- name: 操作方法ガイド
+- name: 攻略ガイド
   items:
     - name: デプロイ アーキテクチャの決定
       href: deployment-architecture.md
     - name: トラブルシューティング
       href: troubleshoot.md
+- name: リファレンス
+  items:
+    - name: Azure PowerShell
+      href: /powershell/module/Az.DedicatedHsm
 - name: リソース
   items:
     - name: よく寄せられる質問
