--- a/articles/spring-cloud/toc.yml
+++ b/articles/spring-cloud/toc.yml
@@ -31,14 +31,10 @@
       href: spring-cloud-tutorial-setup-autoscale.md
     - name: アラートとアクション グループ
       href: spring-cloud-tutorial-alerts-action-groups.md
-    - name: IntelliJ を使用してアプリを展開する
-      href: spring-cloud-tutorial-intellij-deploy-apps.md
     - name: サーキット ブレーカー ダッシュボード
       href: spring-cloud-tutorial-circuit-breaker.md
     - name: カスタム DNS 名
       href: spring-cloud-tutorial-custom-domain.md
-    - name: terraform を使用して Azure Spring Cloud インスタンスをプロビジョニングする
-      href: spring-cloud-tutorial-provision-azure-spring-cloud-instance-terraform.md
     - name: マネージド ID を使用して Key Vault を Azure Spring Cloud アプリに接続する
       href: spring-cloud-tutorial-managed-identities-key-vault.md
     - name: 仮想ネットワークに Azure Spring Cloud をデプロイする
@@ -71,12 +67,14 @@
           href: spring-cloud-tutorial-config-server.md
         - name: サービス登録を有効にする
           href: spring-cloud-service-registration.md
-    - name: 配置
+    - name: デプロイ
       items:
         - name: ステージング環境のセットアップ
           href: spring-cloud-howto-staging-environment.md
         - name: ソース コードから Java アプリを起動する
           href: spring-cloud-howto-launch-from-source.md
+        - name: IntelliJ を使用してアプリを展開する
+          href: spring-cloud-tutorial-intellij-deploy-apps.md
     - name: 構成
       items:
         - name: アプリの開始、停止、および削除
@@ -115,13 +113,15 @@
           href: spring-cloud-howto-github-actions.md
         - name: GitHub Actions での Key Vault を使用した認証
           href: spring-cloud-github-actions-key-vault.md
+        - name: terraform を使用して Azure Spring Cloud インスタンスをプロビジョニングする
+          href: spring-cloud-tutorial-provision-azure-spring-cloud-instance-terraform.md
     - name: トラブルシューティング
       items:
         - name: 問題の自己診断と解決
           href: spring-cloud-howto-self-diagnose-solve.md
         - name: トラブルシューティング ガイド
           href: spring-cloud-troubleshoot.md
-    - name: Migrate
+    - name: 移行
       items:
         - name: Spring Cloud
           href: 'https://docs.microsoft.com/azure/developer/java/migration/migrate-spring-cloud-to-azure-spring-cloud'
